--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@types/he": "^1.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "he": "^1.2.0",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
     "react": "^18",
